# ---------------------------------------------------------------------
# Initialisation
# ---------------------------------------------------------------------
AC_INIT(swordbindings, 1.5.5, sword-bugs@crosswire.org)
AC_CONFIG_SRCDIR(sword.i)
AC_PREREQ(2.52)
AC_REVISION($Revision: 1.1 $)
AM_INIT_AUTOMAKE(swordbindings,1.5.5)

# ---------------------------------------------------------------------
# Check Programs
# ---------------------------------------------------------------------
AC_LANG(C++)
AC_PROG_CC
AC_PROG_CXX
AC_PROG_INSTALL

# ---------------------------------------------------------------------
# Check libraries
# ---------------------------------------------------------------------
AC_CHECK_SWORD(1.5.5)


# ---------------------------------------------------------------------
# Final output
# ---------------------------------------------------------------------
AC_CONFIG_FILES(Makefile)
AC_OUTPUT
