
utilfunsdir = $(top_srcdir)/src/utilfuns
libsword_la_SOURCES += $(utilfunsdir)/Greek2Greek.cpp
libsword_la_SOURCES += $(utilfunsdir)/utilstr.cpp
libsword_la_SOURCES += $(utilfunsdir)/unixstr.cpp
libsword_la_SOURCES += $(utilfunsdir)/swunicod.cpp
libsword_la_SOURCES += $(utilfunsdir)/swversion.cpp

#ifeq (${need_local_regex}, yes)
#lib_libsword_a_SOURCES += $(utilfunsdir)/regex.c
#endif

libsword_la_SOURCES += $(utilfunsdir)/roman.c


